[gd_scene load_steps=2 format=3 uid="uid://bvqy8x7h1n3wj"]

[ext_resource type="Script" path="res://addons/godot_mcp_enhanced/ui/bottom_panel.gd" id="1_bottom_panel"]

[node name="BottomPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bottom_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatusContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="StatusIndicator" type="ColorRect" parent="MarginContainer/VBoxContainer/Header/StatusContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.3, 1, 0.3, 1)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/Header/StatusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚óè Server Running"

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/Header/ButtonsContainer"]
layout_mode = 2
text = "üîÑ Restart Server"

[node name="TestButton" type="Button" parent="MarginContainer/VBoxContainer/Header/ButtonsContainer"]
layout_mode = 2
text = "üß™ Test Connection"

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="PortInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortTitle" type="Label" parent="MarginContainer/VBoxContainer/InfoSection/PortInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Connection"

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoSection/PortInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Port: 3571"

[node name="StatsInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsTitle" type="Label" parent="MarginContainer/VBoxContainer/InfoSection/StatsInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Statistics"

[node name="RequestsLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoSection/StatsInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Requests: 0"

[node name="UptimeLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoSection/StatsInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Uptime: 00:00:00"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfigSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ConfigLabel" type="Label" parent="MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üìã MCP Configuration"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ConfigSection"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ConfigText" type="TextEdit" parent="MarginContainer/VBoxContainer/ConfigSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "{
	\"GDAI_MCP_SERVER_PORT\": \"3571\",
	\"GDAI_RUNTIME_SERVER_PORT\": \"3572\",
	\"AUTO_SCREENSHOT\": true
}"
editable = false
wrap_mode = 1
scroll_fit_content_height = true

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ConfigSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CopyKiroButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigSection/ButtonsContainer"]
layout_mode = 2
text = "üìã Copy for Kiro"

[node name="CopyWindsurfButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigSection/ButtonsContainer"]
layout_mode = 2
text = "üìã Copy for Windsurf"

[node name="CopyCursorButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigSection/ButtonsContainer"]
layout_mode = 2
text = "üìã Copy for Cursor"

[node name="EditConfigButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigSection/ButtonsContainer"]
layout_mode = 2
text = "‚úèÔ∏è Edit Config"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuickLinks" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "üìö Quick Links:"

[node name="DocsButton" type="Button" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "Documentation"

[node name="GitHubButton" type="Button" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "GitHub"

[node name="KiroGuideButton" type="Button" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "Kiro Setup"

[node name="WindsurfGuideButton" type="Button" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "Windsurf Setup"

[node name="AIInstructionsButton" type="Button" parent="MarginContainer/VBoxContainer/QuickLinks"]
layout_mode = 2
text = "AI Instructions"
